After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 621649 - Fix loading TRUE value from the plugin info file
Fix loading TRUE value from the plugin info file
Status: RESOLVED FIXED
Product: libpeas
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: libpeas-maint
libpeas-maint
Depends on:
Blocks:
 
 
Reported: 2010-06-15 14:37 UTC by Bastien Nocera
Modified: 2010-06-15 17:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix loading TRUE value from the plugin info file (1.96 KB, patch)
2010-06-15 14:37 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2010-06-15 14:37:40 UTC
As per patch
Comment 1 Bastien Nocera 2010-06-15 14:37:42 UTC
Created attachment 163682 [details] [review]
Fix loading TRUE value from the plugin info file

Only FALSE values were ever saved.
Comment 2 Steve Frécinaux 2010-06-15 17:21:46 UTC
Attachment 163682 [details] pushed as 3181940 - Fix loading TRUE value from the plugin info file