Fix loading TRUE value from the plugin info file

Only FALSE values were ever saved.

https://bugzilla.gnome.org/show_bug.cgi?id=621649